# BatchFlow

./: .gitignore  README.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/.github/workflows/: ci.yml
backend/alembic/: env.py
backend/alembic/versions/: 20251226_000001_create_batchflow_mvp.py  aa2c4c2dc2d5_add_price_snapshot_to_subscription_items.py
backend/app/: dependencies.py  docs.py  errors.py  logging.py  main.py  settings.py
backend/app/api/middleware/: rate_limit.py  request_id.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: __init__.py  delivery_batches.py  health.py  orders.py  subscriptions.py
backend/app/api/v1/schemas/: common.py  health.py  subscription.py
backend/app/infrastructure/db/models/: __init__.py  address.py  base.py  delivery_batch.py  delivery_batch_order.py  inventory.py  order.py  order_item.py  payment.py  payment_slip.py  plan.py  product.py  product_variant.py  role.py  session.py  subscription.py  user.py  (+3 more)
backend/app/jobs/tasks/: create_batches.py  generate_orders.py  lock_batches.py
backend/app/repositories/interfaces/: delivery_batch_repo.py  order_repo.py  subscription_repo.py
backend/app/services/: delivery_batch_service.py  order_service.py  subscription_service.py  unit_of_work.py
backend/app/shared/: model_fields.py
backend/scripts/: migrate.sh  run_dev.sh  seed_db.py  test.sh
backend/tests/: conftest.py
backend/tests/integration/: test_batch_locking.py  test_create_batches.py  test_generate_orders_idempotency.py
(+3 files in other folders)
