[project]
name = "batchflow-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "SQLAlchemy>=2.0",
  "alembic>=1.13",
  "PyMySQL>=1.1",
  "pydantic>=2.6",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-xdist>=3.6",
  "pytest-pythonpath>=0.7",
  "ruff>=0.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
  "error::sqlalchemy.exc.SAWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"
